// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps/Punch Card App Large Mobile 1`] = `
<div
  className="ms-Stack css-104"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-69"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-70"
    >
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__147"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel146"
              className="ms-TextField-field field-74"
              id="TextField144"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__154"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel153"
              className="ms-TextField-field field-74"
              id="TextField151"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-97"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-98"
    >
      <span
        className="css-69"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-100"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-101"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-102"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App Small Mobile 1`] = `
<div
  className="ms-Stack css-104"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-69"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-70"
    >
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__133"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel132"
              className="ms-TextField-field field-74"
              id="TextField130"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__140"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel139"
              className="ms-TextField-field field-74"
              id="TextField137"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-97"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-98"
    >
      <span
        className="css-69"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-100"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-101"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-102"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App With Items 1 1`] = `
<div
  className="ms-Stack css-104"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-69"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-70"
    >
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__178"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel177"
              className="ms-TextField-field field-74"
              id="TextField175"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__185"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel184"
              className="ms-TextField-field field-74"
              id="TextField182"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-97"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-98"
    >
      <span
        className="css-69"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-100"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-101"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-102"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App With Items 2 1`] = `
<div
  className="ms-Stack css-104"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-69"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-70"
    >
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__192"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel191"
              className="ms-TextField-field field-74"
              id="TextField189"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__199"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel198"
              className="ms-TextField-field field-74"
              id="TextField196"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <button
    className="ms-Button ms-Button--primary root-92"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-96 ms-Button-icon icon-65"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__203"
        >
          Punch In
        </span>
      </span>
    </span>
  </button>
  <div
    className="ms-ProgressIndicator root-97"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-98"
    >
      <span
        className="css-69"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-100"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-101"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-102"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App Without Items 1`] = `
<div
  className="ms-Stack css-104"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-69"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-70"
    >
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__161"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel160"
              className="ms-TextField-field field-74"
              id="TextField158"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-72"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-83"
          >
            <label
              className="ms-Label root-84"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-85"
              data-is-focusable={true}
              id="id__168"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-73"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel167"
              className="ms-TextField-field field-74"
              id="TextField165"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <button
    className="ms-Button ms-Button--primary root-92"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__172"
        >
          😇Start Your Day
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Apps/Time Tool App 1`] = `
<div>
  <div
    className="ms-Grid"
    dir="ltr"
  >
    <div
      className="ms-Grid-col ms-lg2 ms-xl4"
    />
    <div
      className=" ms-Grid-col ms-sm12 ms-lg8 ms-xl4 ms-depth-16 ms-bgColor-gray10 "
    >
      <div
        className="ms-Stack css-107"
      >
        <span
          className="css-108"
        >
          Time Tool
        </span>
        <span
          className="css-109"
        >
          1. Convert date & time for any timezone into a timestamp.
        </span>
        <div
          className="ms-Stack css-104"
        >
          <div
            className="ms-Stack css-86"
          >
            <div
              className="ms-StackItem css-105"
            >
              <div
                className="ms-DatePicker root-110"
              >
                <div
                  aria-haspopup="true"
                >
                  <div
                    className="ms-TextField textField-114"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <label
                        className="ms-Label root-84"
                        htmlFor="DatePicker206-label"
                        id="TextFieldLabel210"
                      >
                        Date
                      </label>
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-73"
                      >
                        <input
                          aria-expanded={false}
                          aria-invalid={false}
                          aria-labelledby="TextFieldLabel210"
                          className="ms-TextField-field field-115"
                          id="DatePicker206-label"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          onKeyDown={[Function]}
                          readOnly={true}
                          required={false}
                          role="combobox"
                          type="text"
                          value="Tue Dec 01 2020"
                        />
                        <i
                          aria-hidden={true}
                          className="ms-DatePicker-event--with-label msDatePickerDisabled icon-117"
                          data-icon-name="Calendar"
                          onClick={[Function]}
                        >
                          
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-105"
            >
              <div
                className="ms-TextField root-87"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-84"
                    htmlFor="TextField211"
                    id="TextFieldLabel213"
                  >
                    Time
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-73"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel213"
                      className="ms-TextField-field field-115"
                      id="TextField211"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onPaste={[Function]}
                      type="text"
                      value="15:31"
                    />
                    <i
                      aria-hidden={true}
                      className="icon-119"
                      data-icon-name="Clock"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-104"
          >
            <div
              className="ms-StackItem css-105"
            >
              <div
                className="ms-Dropdown-container"
              >
                <label
                  className="ms-Label ms-Dropdown-label root-136"
                  id="Dropdown214-label"
                >
                  Timezone
                </label>
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="Dropdown214-label Dropdown214-option"
                  className="ms-Dropdown dropdown-120"
                  data-is-focusable={true}
                  id="Dropdown214"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <span
                    aria-atomic={true}
                    aria-invalid={false}
                    aria-live="polite"
                    aria-posinset={252}
                    aria-selected={true}
                    aria-setsize={594}
                    className="ms-Dropdown-title title-147"
                    id="Dropdown214-option"
                    role="option"
                  >
                    Asia/Calcutta
                  </span>
                  <span
                    className="ms-Dropdown-caretDownWrapper caretDownWrapper-122"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Dropdown-caretDown caretDown-137"
                      data-icon-name="ChevronDown"
                    >
                      
                    </i>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-105"
            >
              <div
                className="ms-Checkbox is-enabled root-138"
              >
                <input
                  aria-checked="false"
                  aria-label="Is end of time?"
                  checked={false}
                  className="input-139"
                  id="checkbox-215"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="ms-Checkbox-label label-140"
                  htmlFor="checkbox-215"
                >
                  <div
                    className="ms-Checkbox-checkbox checkbox-141"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Checkbox-checkmark checkmark-144"
                      data-icon-name="CheckMark"
                    >
                      
                    </i>
                  </div>
                  <span
                    aria-hidden="true"
                    className="ms-Checkbox-text text-143"
                  >
                    Is end of time?
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-145"
        >
          <div
            className="ms-StackItem css-105"
          >
            <div
              className="ms-TextField root-87"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-83"
                >
                  <label
                    className="ms-Label root-84"
                  >
                    Timestamp
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-85"
                    data-is-focusable={true}
                    id="id__219"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-63"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-73"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel218"
                    className="ms-TextField-field field-115"
                    id="TextField216"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={true}
                    style={
                      Object {
                        "border": "2px lightgray dashed",
                      }
                    }
                    type="text"
                    value="1606816860000"
                  />
                  <i
                    aria-hidden={true}
                    className="icon-119"
                    data-icon-name="Copy"
                  >
                    
                  </i>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-StackItem css-105"
          >
            <button
              className="ms-Button ms-Button--default root-62"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Trash"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
                <span
                  className="ms-Button-textContainer textContainer-64"
                >
                  <span
                    className="ms-Button-label label-66"
                    id="id__223"
                  >
                    Clear Local Storage
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="ms-StackItem css-105"
        >
          <span
            className="css-109"
          >
            2. Convert a timestamp to date in the time-zone selected above.
          </span>
        </div>
        <div
          className="ms-StackItem css-105"
        >
          <div
            className="ms-TextField root-87"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-Stack css-83"
              >
                <label
                  className="ms-Label root-84"
                >
                  Paste a timestamp
                </label>
                <button
                  className="ms-Button ms-Button--icon root-85"
                  data-is-focusable={true}
                  id="id__229"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  title="Info"
                  type="button"
                >
                  <span
                    className="ms-Button-flexContainer flexContainer-63"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                      data-icon-name="Info"
                      role="presentation"
                      style={
                        Object {
                          "fontFamily": "\\"FabricMDL2Icons\\"",
                        }
                      }
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
              <div
                className="ms-TextField-fieldGroup fieldGroup-73"
              >
                <input
                  aria-describedby="TextFieldDescription227"
                  aria-invalid={false}
                  className="ms-TextField-field field-74"
                  id="TextField226"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Try a timestamp..."
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription227"
            >
              <span
                className="css-146"
              >
                Thu Jan 01 1970 05:30:00 GMT+0530 (Asia/Calcutta)
              </span>
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="ms-Grid-col ms-lg2 ms-xl4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons/Add Scheduled Slot Small Mobile 1`] = `
<button
  className="ms-Button ms-Button--default root-62"
  data-is-focusable={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="ms-Button-flexContainer flexContainer-63"
    data-automationid="splitbuttonprimary"
  >
    <i
      aria-hidden={true}
      className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
      data-icon-name="Add"
      role="presentation"
      style={
        Object {
          "fontFamily": "\\"FabricMDL2Icons\\"",
        }
      }
    >
      
    </i>
    <span
      className="ms-Button-textContainer textContainer-64"
    >
      <span
        className="ms-Button-label label-66"
        id="id__8"
      >
        Add Scheduled Slot
      </span>
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-83"
>
  <label
    className="ms-Label root-84"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-85"
    data-is-focusable={true}
    id="id__237"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-83"
>
  <label
    className="ms-Label root-84"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-85"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch In Button Small Mobile 1`] = `
<button
  className="ms-Button ms-Button--primary root-92"
  data-is-focusable={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="ms-Button-flexContainer flexContainer-63"
    data-automationid="splitbuttonprimary"
  >
    <span
      className="ms-Button-textContainer textContainer-64"
    >
      <span
        className="ms-Button-label label-66"
        id="id__75"
      >
        Punch In
      </span>
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Punch-In-Time-Cell Desktop 1`] = `
<div
  className="ms-TooltipHost root-93"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-87"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-73"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-74"
          id="TextField83"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 15:31"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-In-Time-Cell Small Mobile 1`] = `
<div
  className="ms-TooltipHost root-93"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-87"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-73"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-74"
          id="TextField79"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 15:31"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Desktop 1`] = `
<div
  className="ms-Stack css-94"
>
  <button
    className="ms-Button ms-Button--primary root-92"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-96 ms-Button-icon primaryButton0Icon-95 primaryButton0Icon-41"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__93"
        >
          Punch Out
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Small Mobile With Value 1`] = `
<div
  className="ms-TooltipHost root-93"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-87"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-73"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-74"
          id="TextField90"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 15:31"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Small Mobile Without Value 1`] = `
<div
  className="ms-Stack css-94"
>
  <button
    className="ms-Button ms-Button--primary root-92"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-96 ms-Button-icon primaryButton0Icon-95 primaryButton0Icon-41"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__86"
        >
          Punch Out
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punched Progress Small Mobile 1`] = `
<div
  className="ms-ProgressIndicator root-97"
>
  <div
    className="ms-ProgressIndicator-itemName itemName-98"
  >
    <span
      className="css-69"
    >
      ⏳Punched
    </span>
  </div>
  <div
    className="ms-ProgressIndicator-itemProgress itemProgress-100"
  >
    <div
      className="ms-ProgressIndicator-progressTrack progressTrack-101"
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="ms-ProgressIndicator-progressBar progressBar-102"
      role="progressbar"
      style={
        Object {
          "transition": undefined,
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Simple Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-86"
  >
    <div
      className="ms-TextField root-87"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-74"
            id="TextField241"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--icon ms-hiddenMdUp root-148"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      className="ms-Button ms-Button--primary ms-hiddenSm root-92"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__247"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Goal For The Day Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="css-69"
  >
    🎯Goal For The Day
  </span>
  <div
    className="ms-Stack css-70"
  >
    <div
      className="ms-TextField textField-72"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-83"
        >
          <label
            className="ms-Label root-84"
          >
            Hours
          </label>
          <button
            className="ms-Button ms-Button--icon root-85"
            data-is-focusable={true}
            id="id__28"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel27"
            className="ms-TextField-field field-74"
            id="TextField25"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="09"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-TextField textField-72"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-83"
        >
          <label
            className="ms-Label root-84"
          >
            Minutes
          </label>
          <button
            className="ms-Button ms-Button--icon root-85"
            data-is-focusable={true}
            id="id__35"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel34"
            className="ms-TextField-field field-74"
            id="TextField32"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="00"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Forms/Goal For The Day Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="css-69"
  >
    🎯Goal For The Day
  </span>
  <div
    className="ms-Stack css-70"
  >
    <div
      className="ms-TextField textField-72"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-83"
        >
          <label
            className="ms-Label root-84"
          >
            Hours
          </label>
          <button
            className="ms-Button ms-Button--icon root-85"
            data-is-focusable={true}
            id="id__14"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel13"
            className="ms-TextField-field field-74"
            id="TextField11"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="09"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-TextField textField-72"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-83"
        >
          <label
            className="ms-Label root-84"
          >
            Minutes
          </label>
          <button
            className="ms-Button ms-Button--icon root-85"
            data-is-focusable={true}
            id="id__21"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel20"
            className="ms-TextField-field field-74"
            id="TextField18"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="00"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-86"
  >
    <div
      className="ms-TextField root-87"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-74"
            id="TextField66"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-88"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-91"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__72"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Large Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-86"
  >
    <div
      className="ms-TextField root-87"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-74"
            id="TextField48"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-88"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-91"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__54"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-86"
  >
    <div
      className="ms-TextField root-87"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-74"
            id="TextField39"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-88"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-91"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__45"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Tablet 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-86"
  >
    <div
      className="ms-TextField root-87"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-73"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-74"
            id="TextField57"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-88"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-91"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-89"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__63"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Scheduled Slot Form Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-104"
  >
    <div
      className="ms-StackItem css-105"
    >
      <div
        className="ms-Stack css-70"
      >
        <div
          className="ms-TextField is-required textField-106"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-83"
            >
              <label
                className="ms-Label root-84"
              >
                Start Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-85"
                data-is-focusable={true}
                id="id__116"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel115"
                className="ms-TextField-field field-74"
                id="TextField113"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 16:00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField is-required textField-106"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-83"
            >
              <label
                className="ms-Label root-84"
              >
                End Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-85"
                data-is-focusable={true}
                id="id__123"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel122"
                className="ms-TextField-field field-74"
                id="TextField120"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 17:00"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--primary root-92"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__127"
          >
            Add Slot
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Scheduled Slot Form Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-104"
  >
    <div
      className="ms-StackItem css-105"
    >
      <div
        className="ms-Stack css-70"
      >
        <div
          className="ms-TextField is-required textField-106"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-83"
            >
              <label
                className="ms-Label root-84"
              >
                Start Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-85"
                data-is-focusable={true}
                id="id__99"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel98"
                className="ms-TextField-field field-74"
                id="TextField96"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 16:00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField is-required textField-106"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-83"
            >
              <label
                className="ms-Label root-84"
              >
                End Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-85"
                data-is-focusable={true}
                id="id__106"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel105"
                className="ms-TextField-field field-74"
                id="TextField103"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 17:00"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--primary root-92"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__110"
          >
            Add Slot
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-43"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-51 ms-Pivot root-44"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-52"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-60"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-45"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-43"
        >
          <span
            className="css-61"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tables/Punched Slots Desktop 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Large Mobile 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Small Mobile 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Template 1`] = `null`;

exports[`Storyshots Tables/Punched Slots With Items 1 1`] = `null`;

exports[`Storyshots Tables/Punched Slots With Items 2 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Without Items 1`] = `null`;
